--- a/Baha'i/Baha/KI/p095-258.html
+++ b/Baha'i/Baha/KI/p095-258.html
@@ -1177,7 +1177,7 @@
 	Ponder the blessed verse, so that the meaning of the words: "There is neither a thing green nor sere <a name="p191"/>but it is noted in the unerring Book," <small><sup>1</sup></small>  may be imprinted upon the tablet of thy heart. Notwithstanding, a multitude bear him allegiance. They have rejected the Moses of knowledge and justice, and clung to the <span style="background-color: #ffffCC" TITLE="A magician employed by Pharaoh as a rival to Moses. According to Muslims, it was he, not Aaron, who made the golden calf">Sámirí</span> <small><sup>2</sup></small> of ignorance. They have turned away their eyes from the Day-star of truth which shineth in the divine and everlasting heaven, and have utterly ignored its splendour. 
 	</td>
 	<td VALIGN=top><small>
-	1. Qur’án 6:59.<br>
+	1. Qur'án 6:59.<br>
 	2. A magician contemporary with Moses.
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">191</DIV></center></small><p></td>
@@ -1187,7 +1187,7 @@
 	O my brother! A divine Mine only can yield the gems of divine knowledge, and the fragrance of the mystic Flower can be inhaled only in the ideal Garden, and the lilies of ancient wisdom can blossom nowhere except in the city of a stainless heart. "In a rich soil, its plants spring forth abundantly by permission of its Lord, and in that soil which is bad, they spring forth but scantily." <small><sup>1</sup></small>  
 	</td>
 	<td VALIGN=top><small>
-	1. Qur’án 7:57.
+	1. Qur'án 7:57.
 	</small></td>
 	<td>&nbsp;</td>
 </tr>
@@ -1490,7 +1490,7 @@
 	<td VALIGN=top rowspan="2"><small>
 	<hr>
 	["Such bounty and revelation..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p190">p. 190</a><p>
-	["have been so abundant..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para36">p. 22</a>
+	["The verses which have rained..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para36">p. 22</a>; <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p243-260Ch13.html#para9">p. 248</a> footnote #7
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">216</DIV></center></small><p></td>
 </tr>
@@ -1579,11 +1579,14 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["Among them was..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p191">p. 191</a><p>
+	["Among them was..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p191">p. 191</a>; <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p378-429Ch20.html#para9">p. 382</a> footnote #12<p>
+	["But for whom "God..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para10">p. 7</a>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para78">p. 50</a><p>	
 	["Mullá Husayn..."] <i>The Revelation of Bahá'u'lláh</i> vol. 4 <a href="../../Others/ROB/V4/p205-213Ch14.html#p209">p. 209</a><p>
-	["But for whom "God..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para10">p. 7</a>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para78">p. 50</a><p>
-	["unique and peerless figure...] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para78">p. 50</a><p>
-	["Mullá Muhammad 'Alíy-i-Zanjání"] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para73">p. 44</a>
+	["unique and peerless figure...] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para78">p. 50</a>; <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p465-499Ch22.html#para90">p. 485</a> footnote #28<p>
+	[Mullá Muhammad 'Alíy-i-Zanjání] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para73">p. 44</a><p>
+	[Mullá Yúsúf-i-Ardibílí] <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p378-429Ch20.html#para215">p. 424</a>&nbsp;&nbsp;  #149 (also <a href="../../Others/DBNN/p378-429Ch20.html#para69">#13</a>, <a href="../../Others/DBNN/p378-429Ch20.html#para33">p. 399</a>, <a href="../../Others/DBNN/p378-429Ch20.html#para43">p. 404</a> footnote #38)<p>
+	[Mullá Mihdíy-i-Khú'í] <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p378-429Ch20.html#para213">p. 423</a>&nbsp;&nbsp;  #147 (also <a href="../../Others/DBNN/p378-429Ch20.html#para214">#148</a>)<p>
+	[Mullá Mihdíy-i-Kandí] <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p378-429Ch20.html#para218">p. 424</a>&nbsp;&nbsp;  #152, 153
 	</small></td>
 	<td>&nbsp;</td>
 </tr>
@@ -1594,7 +1597,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	["All these were guided..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p191">p. 191</a><p>
-	["The whole world,..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para121">p. 79</a>
+	["The whole world,..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para121">p. 79</a>; <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p378-429Ch20.html#para43">p. 404</a> footnote #40
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">224</DIV></center></small><p></td>
 </tr>
@@ -1675,6 +1678,7 @@
 	<td VALIGN=top><small>
 	<hr>
 	["Another proof..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p192">p. 192</a><p>
+	["Though young and tender of age..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#pxlix">p. xlix</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">231</DIV></center></small><p></td>
 </tr>
@@ -1684,6 +1688,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para65">p. xlix</a><p>
 	[Qayyúmu'l-Asmá] <i>The Kitáb-i-Aqdas</i> p. <a href="../KA/p165-251Notes.html#note1">165</a>, <a href="../KA/p165-251Notes.html#note115">216</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p413-436Index.html#Qayyúmu'l-Asmá'">index</a>; <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p351-363Index.html#Qayyúmu'l-Asmá'">Index</a>, vol. 2 p. <a href="../../Others/ROB/V2/p171-193Ch08.html#p179">179</a>, <a href="../../Others/ROB/V2/p301-336Ch15.html#p303">303</a>, vol. 4 <a href="../../Others/ROB/V4/p463-485Index.html#Qayyúmu'l-Asmá">Index</a>
 	</small></td>
 	<td>&nbsp;</td>
@@ -1693,7 +1698,8 @@
 	Likewise, in His interpretation of the letter "Há," He craved martyrdom, saying: "Methinks <a name="p232"/>I heard a Voice calling in my inmost being: 'Do thou sacrifice the thing which Thou lovest most in the path of God, even as <span style="background-color: #ffffCC" TITLE="The third Imám. Son of 'Alí and Fátimih.">Husayn</span>, peace be upon him, hath offered up his life for My sake.' And were I not regardful of this inevitable mystery, by Him, Who hath my being between His hands even if all the kings of the earth were to be leagued together they would be powerless to take from me a single letter, how much less can these servants who are worthy of no attention, and who verily are of the outcast... That all may know the degree of My patience, My resignation, and self-sacrifice in the path of God."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p500-526Ch23.html#para23">p. 514</a> footnote #18
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">232</DIV></center></small><p></td>
 </tr>
@@ -1702,7 +1708,7 @@
 	Could the Revealer of such utterance be regarded as walking any way but the way of God, and as having yearned for aught else except His good-pleasure? In this very verse there lieth concealed a breath of detachment, which if it were to be breathed full upon the world, all beings would renounce their lives, and sacrifice their souls. Reflect upon the villainous behaviour of this generation, and witness their astounding ingratitude. Observe how they have closed their eyes to all this glory, and are abjectly pursuing those foul carcasses from whose bellies ascendeth the cry <a name="p233"/>of the swallowed substance of the faithful. And yet, what unseemly calumnies they have hurled against those Daysprings of Holiness? Thus do We recount unto thee that which the hands of the infidels have wrought, they who, in the Day of Resurrection, have turned their face away from the divine Presence, whom God hath tormented with the fire of their own misbelief, and for whom He hath prepared in the world to come a chastisement which shall devour both their bodies and souls. For these have said: "God is powerless, and His hand of mercy is fettered." 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para66">p. xlix</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">233</DIV></center></small><p></td>
 </tr>
@@ -1724,6 +1730,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para67">p. l</a><p>
 	["And now consider..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p192">p. 192</a><p>
 	[Ridván] <a href="../KA/p258-296Index.html#Ridván"><i>The Kitáb-i-Aqdas</i></a>; <i>Prayers and Meditations</i>, <a href="../PM/p003-340.html#para8">p. 6</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i>, <a href="../GL/p003-346.html#para56">p. 31</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. <a href="../../Others/ROB/V1/p351-363Index.html#Ridván">1</a>, <a href="../../Others/ROB/V2/p469-476Index.html#Ridván">2</a>, <a href="../../Others/ROB/V3/p467-483Index.html#Ridván">3</a>, <a href="../../Others/ROB/V4/p463-485Index.html#Ridván,Gardenof">4</a>
 	</small></td>
@@ -1735,6 +1742,7 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	["…No sooner had..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para68">p. l</a><p>
 	["And among the evidences..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p153-197Ch10.html#p193">p. 193</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">235</DIV></center></small><p></td>
@@ -1744,7 +1752,8 @@
 	Reflect: Who in this world is able to manifest such transcendent power, such pervading influence? All these stainless hearts and sanctified souls have, with absolute resignation, responded to the summons of His decree. Instead of complaining, they rendered thanks unto God, and amidst the darkness of their anguish they revealed naught but radiant acquiescence to His will. It is evident how relentless was the hate, and how bitter the malice and enmity entertained by all the peoples <a name="p236"/>of the earth towards these companions. The persecution and pain they inflicted on these holy and spiritual beings were regarded by them as means unto salvation, prosperity, and everlasting success. Hath the world, since the days of Adam, witnessed such tumult, such violent commotion? Notwithstanding all the torture they suffered, and manifold the afflictions they endured, they became the object of universal opprobrium and execration. Methinks patience was revealed only by virtue of their fortitude, and faithfulness itself was begotten only by their deeds. 
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para69">p. l</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">236</DIV></center></small><p></td>
 </tr>
@@ -1753,7 +1762,8 @@
 	Do thou ponder these momentous happenings in thy heart, so that thou mayest apprehend the greatness of this Revelation, and perceive its stupendous glory. Then shall the spirit of faith, through the grace of the Merciful, be breathed into thy being, and thou shalt be established and abide upon the seat of certitude. The one God is My witness! Wert thou to ponder a while, thou wilt recognize that, apart from all these established truths and above-mentioned evidences, the repudiation, cursing, and execration, pronounced by the people of the earth, are in themselves the mightiest proof and the surest testimony of the truth of these heroes of the field of resignation <a name="p237"/>and detachment. Whenever thou dost meditate upon the cavils uttered by all the people, be they divines, learned or ignorant, the firmer and the more steadfast wilt thou grow in the Faith. For whatsoever hath come to pass, hath been prophesied by them who are the Mines of divine knowledge, and Recipients of God's eternal law.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#para70">p. li</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">237</DIV></center></small><p></td>
 </tr>
@@ -1807,11 +1817,11 @@
 </tr>
 <tr>
 	<td><a name="para170"></a>
-	And now, consider this other tradition, and observe how all these things have been foretold. In "<span style="background-color: #ffffCC" TITLE="A collection of Shí‘íh traditions.">Arbá'in</span>" it is recorded: "Out of <span style="background-color: #ffffCC" TITLE="The family to which Muhammad belonged.">Baní-Háshim</span> there shall come forth a Youth Who shall reveal new laws. He shall summon the people unto Him, but none will heed His call. Most of His enemies will be the divines. His bidding they will not obey, <a name="p243"/>but will protest saying: 'This is contrary to that which hath been handed down unto us by the Imáms of the Faith.'" In this day, all are repeating these very same words, utterly unaware that He is established upon the throne of "He doeth whatsoever He willeth," and abideth upon the seat of "He ordaineth whatsoever He pleaseth." 
+	And now, consider this other tradition, and observe how all these things have been foretold. In "<span style="background-color: #ffffCC" TITLE="A collection of Shí'íh traditions.">Arbá'in</span>" it is recorded: "Out of <span style="background-color: #ffffCC" TITLE="The family to which Muhammad belonged.">Baní-Háshim</span> there shall come forth a Youth Who shall reveal new laws. He shall summon the people unto Him, but none will heed His call. Most of His enemies will be the divines. His bidding they will not obey, <a name="p243"/>but will protest saying: 'This is contrary to that which hath been handed down unto us by the Imáms of the Faith.'" In this day, all are repeating these very same words, utterly unaware that He is established upon the throne of "He doeth whatsoever He willeth," and abideth upon the seat of "He ordaineth whatsoever He pleaseth." 
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["He doeth whatsoever He willeth..."] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">para. 47</a>
+	["He doeth whatsoever He willeth..."] <i>The Kitáb-i-Aqdas</i> <a href="../KA/p019-088Aqdas.html#para47">&para;47</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">243</DIV></center></small><p></td>
 </tr>
@@ -1822,6 +1832,7 @@
 	<td VALIGN=top><small>
 	1. Qur'án 25:44.<br>
 	<hr>
+	["It is related..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p047-096Ch03.html#para19">p. 65</a> footnote #14<p>
 	["Knowledge is..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p210-220Ch12.html#p216">p. 216</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">244</DIV></center></small><p></td>
@@ -1833,7 +1844,7 @@
 	<td VALIGN=top rowspan="2"><small>
 	<hr>
 	["Even as it hath been recorded..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1 <a href="../../Others/ROB/V1/p257-282Ch16.html#p267">p. 267</a><p>
-	["Hadíth-i-Jábir..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para122">p. 80</a>
+	["Hadíth-i-Jábir..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para122">p. 80</a>; <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p595-650Ch26.html#para75">p. 645</a> footnote #39
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">245</DIV></center></small><p></td>
 </tr>
@@ -2060,6 +2071,8 @@
 	  ["It was in 1888..."]  <i>The Revelation of Bahá'u'lláh</i> vol. 4 <a href="../../Others/ROB/V4/p368-390Ch24.html#p385">p. 385</a><p>
 	  ["The rapid and revolutionizing change..."] <i>The Revelation of Bahá'u'lláh</i> vol. 4 <a href="../../Others/ROB/V4/p413-424Ch26.html#p421">p. 421</a><p>
 	  ["The authorship of the Kitáb-i-Íqán..."] <i>The Revelation of Bahá'u'lláh</i> vol. 4 <a href="../../Others/ROB/V4/p432-440Apndx_III.html#p438">p. 438</a>
+	  <br><br><br><br>
+	  <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/Introduction.html#plviii">Genealogy of the Báb</a>
 	  </small></td>
 </tr>
 </table>
