--- a/Baha'i/Baha/TOB/Cover.html
+++ b/Baha'i/Baha/TOB/Cover.html
@@ -81,14 +81,14 @@
 
 	<blockquote><blockquote>
 	<b>Library of Congress Cataloging-in-Publication Data</b><p>
-	Baha’ Allah, 1817-1892.<br>
-	<blockquote>Tablets of Bahá’u’lláh, revealed after the Kitáb-i-aqdas.<br>
+	Baha' Allah, 1817-1892.<br>
+	<blockquote>Tablets of Bahá'u'lláh, revealed after the Kitáb-i-aqdas.<br>
 	Bibliography: p.<br>
 	Includes index.<br>
 	1.	Baha'i Faith-Doctrines. I. Taherzadeh, Habib. </blockquote>
 	II. Universal House of Justice. Research Dept.<br>
 	III. Title.<br>
-	BP360.B11913 1988 297’.8982 88-6250<br>
+	BP360.B11913 1988 297'.8982 88-6250<br>
 	ISBN 0-87743-216-3<p><br><br><br>
 	</blockquote></blockquote>
 
