--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -2866,7 +2866,8 @@
 	Praise be unto God Who hath manifested the Point, hath unfolded therefrom the knowledge of all things, whether of the past or of the future--a Point He hath chosen to be the Herald of His Name and the Harbinger of His Great Revelation which hath caused the limbs of all mankind to quake and the splendor of His light to shine forth above the horizon of the world. Verily, this is the Point which God hath ordained to be an ocean of light for the sincere among His servants and a flame of fire to the froward amidst His creatures and the impious among His people--they who bartered away the gift of God for unbelief, and the celestial food for hypocrisy, and led their associates to a wretched abode. These are the people who <a name="p103"/>have manifested sedition throughout the world and have violated His Covenant on the Day when the immortal Being mounted His throne and the Crier raised His Voice from the haven of security and peace in the holy Vale.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	<i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p500-526Ch23.html#para23">p. 514</a> footnote #18
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">103</DIV></center><p></small></td>
 </tr>
@@ -3180,7 +3181,8 @@
 	These are verses We sent down previously, and We have sent them unto thee, that thou mayest be acquainted <a name="p120"/>with what their lying tongues have spoken, when God came unto them with might and sovereignty. The foundations of idle fancies have trembled, and the heaven of vain imaginings hath been cleft asunder, and yet the people are in doubt and in contention with Him. They have denied the testimony of God and His proof, after He came from the heaven of power with the kingdom of His signs. They have cast away what had been prescribed, and perpetrated what had been forbidden them in the Book. They have abandoned their God, and clung unto their desires. They truly have strayed and are in error. They read the verses and deny them. They behold the clear tokens and turn aside. They truly are lost in strange doubt.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+	["It was to this teacher..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p391-412Ch25.html#p405">p. 405</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">120</DIV></center><p></small></td>
 </tr>
