--- a/Baha'i/Baha/HiddenWords.html
+++ b/Baha'i/Baha/HiddenWords.html
@@ -570,8 +570,8 @@
 	   </td>
 	   <td></td>
        <td VALIGN=top><small><center><a name="arabic59">Arabic #59</a></center><p>
-	   <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../Others/ROB/V2/p194-221Ch09.html#p216">p. 216</a>, 
-	   vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p68">p. 68</a> 
+	   <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../Others/ROB/V2/p194-221Ch09.html#p216">p. 216</a>, vol. 4, <a href="../Others/ROB/V4/p050-072Ch04.html#p68">p. 68</a><p>
+	   <i>The Dawn-Breakers</i>, <a href="../Others/DBNN/p001-018Ch01.html#p8">p. 8</a> 
 	   
 	   </small>
 	   </td>
@@ -974,8 +974,11 @@
        <td><center><b>O SON OF EARTH!</b></center> 
 	   <blockquote>Wouldst thou have Me, seek none other than Me; and wouldst thou gaze upon My beauty, close thine eyes to the world and all that is therein; for My will and the will of another than Me, even as fire and water, cannot dwell together in one heart.</blockquote>
 	   </td>
-	   <td></td>
-       <td VALIGN=top><small><center><a name="persian31">Persian #31</a></center><p></small></td>
+	   <td>
+	   </td>
+       <td VALIGN=top><small><center><a name="persian31">Persian #31</a></center><p>
+	   <i>The Dawn-Breakers</i>, <a href="../Others/DBNN/p001-018Ch01.html#p8">p. 8</a>
+	   </small></td>
 </tr>
 
 <tr>
